--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -18,9 +18,26 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.20'
-    testImplementation("com.github.tschuchortdev:kotlin-compile-testing:1.4.8")
+    testImplementation 'dev.zacsweers.kctfork:core:0.4.0'
+}
+
+gradlePlugin {
+    plugins {
+        create("KIDPlugin") {
+            id = 'com.zzt.kid'
+            implementationClass = 'com.zzt.kid.plugin.KIDSupportPlugin'
+        }
+    }
 }
 
 test {
     useJUnitPlatform()
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = '1.8'
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = '1.8'
 }
