--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -10,6 +10,7 @@ repositories {
 
 dependencies {
     implementation gradleApi()
+    implementation project(":annotation")
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.9.20")
     implementation("org.jetbrains.kotlin:kotlin-gradle-plugin-api:1.9.20")
     implementation("org.jetbrains.kotlin:kotlin-compiler-embeddable:1.9.20")
