--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,15 @@
 kotlin.code.style=official
+
+GROUP=io.github.androidzzt
+VERSION_NAME=1.0.0-SNAPSHOT
+POM_DESCRIPTION=A KCP Plugin for transforming Kotlin IR at compile time.
+POM_INCEPTION_YEAR=2023
+POM_URL=https\://github.com/androidZzT/KtIRDissector
+POM_SCM_URL=https\://github.com/androidZzT/KtIRDissector
+POM_SCM_CONNECTION=scm\:git\:https\://github.com/androidZzT/KtIRDissector
+POM_SCM_DEV_CONNECTION=scm\:git\:https\://github.com/androidZzT/KtIRDissector
+POM_LICENCE_NAME=Mozilla Public License 2.0
+POM_LICENCE_URL=https\://www.mozilla.org/en-US/MPL/2.0/
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=androidZzT
+POM_DEVELOPER_NAME=androidZzT
