fix apply plugin and transform bug

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,26 @@
 kotlin.code.style=official
 
 GROUP=io.github.androidzzt
-VERSION_NAME=1.0.0-SNAPSHOT
+VERSION_NAME=1.0.8
 POM_DESCRIPTION=A KCP Plugin for transforming Kotlin IR at compile time.
 POM_INCEPTION_YEAR=2023
 POM_URL=https\://github.com/androidZzT/KtIRDissector
 POM_SCM_URL=https\://github.com/androidZzT/KtIRDissector
 POM_SCM_CONNECTION=scm\:git\:https\://github.com/androidZzT/KtIRDissector
 POM_SCM_DEV_CONNECTION=scm\:git\:https\://github.com/androidZzT/KtIRDissector
-POM_LICENCE_NAME=Mozilla Public License 2.0
-POM_LICENCE_URL=https\://www.mozilla.org/en-US/MPL/2.0/
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https\://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=androidZzT
 POM_DEVELOPER_NAME=androidZzT
+
+org.gradle.configureondemand=false
+
+kapt.include.compile.classpath=false
+
+ksp.version.check=false
+
+# New Kotlin IC flags
+kotlin.compiler.suppressExperimentalICOptimizationsWarning=true
+kotlin.compiler.keepIncrementalCompilationCachesInMemory=true
+kotlin.compiler.preciseCompilationResultsBackup=true
