--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,6 @@
-import com.vanniktech.maven.publish.SonatypeHost
-
-buildscript {
-    repositories {
-        maven{
-            url = "https://www.jitpack.io"
-        }
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-        mavenLocal()
-    }
-
-    dependencies {
-        classpath("com.android.tools.build:gradle:4.1.3")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.20")
-        classpath("com.vanniktech:gradle-maven-publish-plugin:0.26.0")
-    }
-}
-
-subprojects {
-    apply plugin: 'com.vanniktech.maven.publish'
-
-    repositories {
-        mavenCentral()
-    }
-
-    mavenPublishing {
-        publishToMavenCentral(SonatypeHost.DEFAULT)
-        signAllPublications()
-    }
+plugins {
+    id "com.vanniktech.maven.publish" version "0.26.0"
+    id 'org.jetbrains.kotlin.multiplatform' version '1.9.21' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.9.21' apply false
+    id "com.google.devtools.ksp" version "1.9.21-1.0.16" apply false
 }
