--- a/plugin/build.gradle
+++ b/plugin/build.gradle
@@ -1,26 +1,31 @@
-apply plugin: "java-gradle-plugin"
-apply plugin: "org.jetbrains.kotlin.jvm"
-apply plugin: "kotlin-kapt"
+plugins {
+    id 'java-gradle-plugin'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.21'
+    id "com.google.devtools.ksp" version "1.9.21-1.0.16"
+    id "com.vanniktech.maven.publish" version "0.26.0"
+}
 
 dependencies {
     implementation gradleApi()
-    implementation project(":annotation")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.9.20")
-    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin-api:1.9.20")
-    implementation("org.jetbrains.kotlin:kotlin-compiler-embeddable:1.9.20")
-    implementation "com.google.auto.service:auto-service:1.0.1"
-    kapt "com.google.auto.service:auto-service:1.0.1"
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.9.21")
+    implementation("org.jetbrains.kotlin:kotlin-gradle-plugin-api:1.9.21")
+    implementation("org.jetbrains.kotlin:kotlin-compiler-embeddable:1.9.21")
+    implementation("com.google.auto.service:auto-service-annotations:1.1.1")
+    ksp("dev.zacsweers.autoservice:auto-service-ksp:1.1.0")
 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.20'
+    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.21'
     testImplementation 'dev.zacsweers.kctfork:core:0.4.0'
+    testImplementation 'io.github.androidzzt:kid-annotation-jvm:1.0.0-SNAPSHOT'
 }
 
 gradlePlugin {
     plugins {
         create("KIDPlugin") {
-            id = 'com.zzt.kid'
-            implementationClass = 'com.zzt.kid.plugin.KIDSupportPlugin'
+            id = "io.github.androidzzt.kid-plugin"
+            implementationClass = "com.zzt.kid.plugin.KIDSupportPlugin"
+            displayName = "Kotlin IR Transform Plugin"
+            description = "a tool for transforming Kotlin IR at compile time. You can write kotlin code directly in the project to hook the entry and exit of the target method or completely replace the target method."
         }
     }
 }
