--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -1,3 +1,3 @@
-POM_ARTIFACT_ID=plugin
+POM_ARTIFACT_ID=kid-plugin
 POM_NAME=Kotlin IR Dissector (Plugin)
 POM_DESCRIPTION=Kotlin IR Dissector (Plugin)
