fix upload mavencentral script

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,9 @@ POM_LICENCE_URL=https\://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=androidZzT
 POM_DEVELOPER_NAME=androidZzT
+SONATYPE_CONNECT_TIMEOUT_SECONDS = 300
+#SONATYPE_HOST=S01
+#RELEASE_SIGNING_ENABLED=true
 
 org.gradle.configureondemand=false
 
